--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
   color: #000;
 }
 .filters-section .btn {
+  display: flex;
+  margin-left: auto;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -62,7 +64,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 500;
   border-radius: 18px;
-  padding: 6.5px 16px 9.5px 16px;
+  padding: 8px 16px 8px 16px;
   font-size: 12px;
   line-height: 133%;
   color: #fff;
