--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,8 @@ body {
     color: $color-dark;
   }
   .btn {
+    display: flex;
+    margin-left: auto;
     font-family: $font-ubuntu;
     font-weight: $font-ubuntu-regular;
     font-size: 14px;
@@ -88,7 +90,7 @@ body {
   font-family:$font-lato;
   font-weight: $font-lato-medium;
   border-radius: 18px;
-  padding: 6.5px 16px 9.5px 16px;
+  padding: 8px 16px 8px 16px;
   font-size: 12px;
   line-height: 133%;
   color: #fff;
