--- a/style.scss
+++ b/style.scss
@@ -96,13 +96,25 @@ body {
   color: #fff;
   border: none;
   &.purple { background-color: $color-purple;
-              color: #7f56d9;      }
+              color: #7f56d9;
+    &:hover { background-color:#7f56d9;
+      color: #fff;
+
+    }}
   &.blue {
     background-color: $color-blue;
     color: #2b68e5;
+    &:hover { background-color:#2b68e5;
+      color: #fff;
+
+    }
   }
   &.green { background-color: $color-green;
-    color: #2c9d67;}
+    color: #2c9d67;
+    &:hover { background-color:#2c9d67;
+      color: #fff;
+
+    }}
   &.orange { background-color: $color-orange;
     color: #ff7900;
   &:hover { background-color:#ff7900;
@@ -110,9 +122,17 @@ body {
 
   }}
   &.cream { background-color: $color-cream;
-    color: #9f4709;}
+    color: #9f4709;
+    &:hover { background-color:#9f4709;
+      color: #fff;
+
+    }}
   &.pink { background-color: $color-pink;
-    color: #d95682;}
+    color: #d95682;
+    &:hover { background-color:#d95682;
+      color: #fff;
+
+    }}
 }
 
 /* Карточка события */
