--- a/style.css
+++ b/style.css
@@ -74,49 +74,67 @@ body {
   background-color: #f9f5ff;
   color: #7f56d9;
 }
-.tag.purple:hover {
+.tag.purple:active {
   background-color: #7f56d9;
   color: #fff;
+}
+.tag.purple:hover {
+  box-shadow: 0 0 0 1px #7f56d9;
 }
 .tag.blue {
   background-color: #eff6ff;
   color: #2b68e5;
 }
-.tag.blue:hover {
+.tag.blue:active {
   background-color: #2b68e5;
   color: #fff;
+}
+.tag.blue:hover {
+  box-shadow: 0 0 0 1px #2b68e5;
 }
 .tag.green {
   background-color: #effaf3;
   color: #2c9d67;
 }
-.tag.green:hover {
+.tag.green:active {
   background-color: #2c9d67;
   color: #fff;
+}
+.tag.green:hover {
+  box-shadow: 0 0 0 1px #2c9d67;
 }
 .tag.orange {
   background-color: #fffaec;
   color: #ff7900;
 }
-.tag.orange:hover {
+.tag.orange:active {
   background-color: #ff7900;
   color: #fff;
+}
+.tag.orange:hover {
+  box-shadow: 0 0 0 1px #ff7900;
 }
 .tag.cream {
   background-color: #ffeee0;
   color: #9f4709;
 }
-.tag.cream:hover {
+.tag.cream:active {
   background-color: #9f4709;
   color: #fff;
+}
+.tag.cream:hover {
+  box-shadow: 0 0 0 1px #9f4709;
 }
 .tag.pink {
   background-color: #ffe8fa;
   color: #d95682;
 }
-.tag.pink:hover {
+.tag.pink:active {
   background-color: #d95682;
   color: #fff;
+}
+.tag.pink:hover {
+  box-shadow: 0 0 0 1px #d95682;
 }
 
 /* Карточка события */
@@ -124,7 +142,7 @@ body {
   height: 100%;
   border: 24px solid #F2F2F2;
   border-bottom: 16px solid #F2F2F2;
-  border-radius: 18px;
+  border-radius: 24px;
   background: #F2F2F2;
   overflow: hidden;
 }
@@ -162,10 +180,14 @@ body {
 .event-card .card-title {
   font-family: "Lato", sans-serif;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 19px;
   line-height: 130%;
   margin-bottom: 16px;
   color: #000;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Количество строк */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .event-card .price {
   font-family: "Lato", sans-serif;
@@ -205,6 +227,44 @@ body {
 .icon-btn {
   background-color: #F2F2F2;
   border-radius: 8px;
+}
+
+.banner-block img {
+  width: 100%;
+}
+
+.vertical-banner {
+  height: 100%;
+  border-radius: 24px;
+  overflow: hidden;
+}
+.vertical-banner img {
+  width: 100%;
+  height: 100%;
+}
+
+.button-all {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+.button-all .btn {
+  background-color: #bb8a4d !important;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 178%;
+  color: #fff;
+  border-radius: 16px;
+  padding: 8px 16px;
+}
+.button-all .btn:hover {
+  background-color: #9b703b !important;
+  color: #fff;
+}
+.button-all .btn:active {
+  background-color: #76552d !important;
+  color: #fff;
 }
 
 /*# sourceMappingURL=style.css.map */
