--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,21 @@
 /* Палитра цветов */
 $color-purple: #f9f5ff;
+$color-purple-hover:#7f56d9;
 $color-blue: #eff6ff;
+$color-blue-hover:#2b68e5;
 $color-green: #effaf3;
+$color-green-hover: #2c9d67;
 $color-orange: #fffaec;
+$color-orange-hover: #ff7900;
 $color-cream: #ffeee0;
+$color-cream-hover: #9f4709;
 $color-pink: #ffe8fa;
+$color-pink-hover: #d95682;
 $color-gold: #bb8a4d;
+$color-gold-hover:#9b703b;
+$color-gold-active:#76552d;
 $color-dark-grey: #dcdcdc;
+
 $color-dark-grey-text: #838383;
 $color-light: #F7F7F7;
 $color-dark: #000;
@@ -97,41 +106,58 @@ body {
   border: none;
   &.purple { background-color: $color-purple;
               color: #7f56d9;
-    &:hover { background-color:#7f56d9;
+    &:active { background-color:$color-purple-hover;
       color: #fff;
 
-    }}
+    }
+    &:hover {
+      box-shadow: 0 0 0 1px $color-purple-hover;
+    }
+  }
   &.blue {
     background-color: $color-blue;
     color: #2b68e5;
-    &:hover { background-color:#2b68e5;
+    &:active { background-color:$color-blue-hover;
       color: #fff;
 
+    }
+    &:hover {
+      box-shadow: 0 0 0 1px $color-blue-hover;
     }
   }
   &.green { background-color: $color-green;
     color: #2c9d67;
-    &:hover { background-color:#2c9d67;
+    &:active { background-color:$color-green-hover;
       color: #fff;
 
+    }
+    &:hover {
+      box-shadow: 0 0 0 1px $color-green-hover;
     }}
   &.orange { background-color: $color-orange;
     color: #ff7900;
-  &:hover { background-color:#ff7900;
-    color: #fff;
-
-  }}
+    &:active { background-color:$color-orange-hover;
+    color: #fff;  }
+    &:hover {
+      box-shadow: 0 0 0 1px $color-orange-hover;
+    }}
   &.cream { background-color: $color-cream;
     color: #9f4709;
-    &:hover { background-color:#9f4709;
+    &:active { background-color:$color-cream-hover;
       color: #fff;
 
+    }
+    &:hover {
+      box-shadow: 0 0 0 1px $color-cream-hover;
     }}
   &.pink { background-color: $color-pink;
     color: #d95682;
-    &:hover { background-color:#d95682;
+    &:active { background-color:$color-pink-hover;
       color: #fff;
 
+    }
+    &:hover {
+      box-shadow: 0 0 0 1px $color-pink-hover;
     }}
 }
 
@@ -140,7 +166,7 @@ body {
   height: 100%;
   border: 24px solid #F2F2F2;
   border-bottom : 16px solid #F2F2F2;
-  border-radius: 18px;
+  border-radius: 24px;
   background: #F2F2F2;
 
 
@@ -187,11 +213,15 @@ body {
   .card-title {
     font-family: $font-lato;
     font-weight: $font-lato-bold;
-    font-size: 20px;
+    font-size: 19px;
     line-height: 130%;
 
     margin-bottom: 16px;
     color: $color-dark;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Количество строк */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 
   }
   .price {
@@ -240,3 +270,48 @@ body {
   border-radius: 8px;
 
 }
+.banner-block {
+  img {
+    width: 100%;
+  }
+}
+.vertical-banner {
+  height: 100%;
+  border-radius: 24px;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+}
+.button-all {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  .btn {
+    background-color: $color-gold!important;
+    font-family: $font-lato;
+    font-weight: $font-lato-bold;
+    font-size: 18px;
+    line-height: 178%;
+    color: $color-white;
+    border-radius: 16px;
+
+    padding: 8px 16px;
+    &:hover {
+      background-color: $color-gold-hover!important;
+      color: $color-white;
+    }
+    &:active {
+      background-color: $color-gold-active!important;
+      color: $color-white;
+    }
+
+
+
+  }
+}
+
+
+
