--- a/style.css
+++ b/style.css
@@ -233,6 +233,10 @@ body {
   width: 100%;
 }
 
+.banner-wrapper {
+  order: 13;
+}
+
 .vertical-banner {
   height: 100%;
   border-radius: 24px;
@@ -265,6 +269,23 @@ body {
 .button-all .btn:active {
   background-color: #76552d !important;
   color: #fff;
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1600px;
+    margin: 0 auto;
+  }
+  .row-xxl-5-cols > .col {
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+  .banner-wrapper {
+    order: 16;
+  }
+  .row-xxl-5-cols .col:nth-child(n+28) {
+    display: none !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
