--- a/style.scss
+++ b/style.scss
@@ -15,8 +15,9 @@ $color-gold: #bb8a4d;
 $color-gold-hover:#9b703b;
 $color-gold-active:#76552d;
 $color-dark-grey: #dcdcdc;
-
+$color-grey-footer: #434343;
 $color-dark-grey-text: #838383;
+$color-light-grey: #f2f2f2;
 $color-light: #F7F7F7;
 $color-dark: #000;
 $color-white:#fff;
@@ -35,6 +36,7 @@ $font-lato-bold: 700;
 body {
   font-family: $font-ubuntu;
   font-weight: $font-ubuntu-regular;
+  font-weight: $font-ubuntu-medium;
   font-family: $font-lato;
   font-weight: $font-lato-bold;
   font-family: 'Onest', sans-serif;
@@ -166,10 +168,10 @@ body {
 
 .event-card {
   height: 100%;
-  border: 24px solid #F2F2F2;
-  border-bottom : 16px solid #F2F2F2;
+  border: 24px solid $color-light-grey;
+  border-bottom : 16px solid $color-light-grey;
   border-radius: 24px;
-  background: #F2F2F2;
+  background: $color-light-grey;
 
 
   overflow: hidden;
@@ -267,7 +269,7 @@ body {
 
 /* Кнопка-иконка в карточке */
 .icon-btn {
-  background-color: #F2F2F2;
+  background-color: $color-light-grey;
 
   border-radius: 8px;
 
@@ -314,6 +316,137 @@ body {
     }
 
 
+
+  }
+}
+
+/*FOOTER*/
+.footer {
+
+  font-family: $font-ubuntu;
+  font-weight: $font-ubuntu-regular;
+  color: $color-white;
+
+  &__wrapper {
+    background-color: $color-grey-footer;
+    border-radius: 24px 24px 0 0;
+    padding: 48px;
+    @media (max-width: 768px) {
+      padding: 24px;
+
+    }
+  }
+  &__margin-minus {
+    @media (max-width: 768px) {
+     margin-top: -18px;
+
+    }
+    @media (max-width: 375px) {
+      margin-top: -103px;
+
+    }
+
+  }
+  &__row {
+    row-gap: 2rem;
+    @media (max-width: 768px) {
+      row-gap: 0rem;
+
+    }
+  }
+
+  &__column {
+    font-size: 16px;
+  }
+
+  &__logo {
+    width: 48px;
+    height: 48px;
+  }
+
+  &__phone {
+    font-weight: $font-ubuntu-medium;
+    font-size: 16px;
+  }
+
+  &__title {
+    font-family: $font-lato;
+    font-weight: $font-lato-bold;
+    line-height: 1;
+    font-size: 24px;
+    margin-bottom: 14px;
+    @media (max-width: 375px) {
+      font-size: 16px;
+
+    }
+  }
+
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
+
+  &__item {
+    margin-bottom: 8px;
+  }
+
+  &__link {
+    color: $color-dark-grey-text;
+    text-decoration: none;
+    transition: color 0.2s;
+    font-size: 16px;
+    line-height: 1.5;
+    @media (max-width: 375px) {
+      font-size: 12px;
+      line-height: 1.33;
+    }
+
+    &:hover {
+      color: $color-white;
+    }
+  }
+
+  &__divider {
+    margin-top: 40px;
+    border-top: 1px solid #595959;
+    @media (max-width: 768px) {
+      margin-top: 16px;
+
+    }
+  }
+
+}
+
+// Соцсети как отдельный блок
+.social {
+  display: flex;
+  gap: 0.25rem;
+
+  &__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    background-color: $color-light-grey;
+    border-radius: 8px;
+    transition: background 0.2s;
+
+    &:hover {
+      background-color: $color-gold;
+      .social__svg {
+        fill: $color-white;
+      }
+    }
+    &:active {
+      background-color:  #2b2b2b;
+      .social__svg {
+        fill: $color-white;
+      }
+    }
+    .social__svg {
+      fill: $color-grey-footer;
+    }
 
   }
 }
