--- a/style.scss
+++ b/style.scss
@@ -182,6 +182,18 @@ body {
       height: 32px;
       margin-top: 12px;
       margin-right: 12px;
+      background-color: $color-light-grey;
+      border-radius: 8px;
+      background-image: url('img/bookmark.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 12px 18px;
+      border: none;
+      padding: 0;
+    }
+    .btn.active {
+      background-image: url('img/bookmark_check.svg');
+      background-size: 32px 32px;
     }
     .tag-filters {
       margin: 8px;
@@ -250,6 +262,7 @@ body {
     color: $color-dark;
     border-radius: 18px;
     padding: 4px 8px;
+    display: none;
 
   }
 
@@ -264,14 +277,21 @@ body {
   .card-title {
     color: #747474;
   }
+  img {
+    filter: grayscale(100%);
+  }
+  .price {
+    display: none;
+  }
+  .status-cancelled {
+    display: block;
+  }
 
 }
 
 /* Кнопка-иконка в карточке */
 .icon-btn {
-  background-color: $color-light-grey;
 
-  border-radius: 8px;
 
 }
 .banner-block {
